--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -2,6 +2,7 @@
     border-radius: 10px;
     padding: 10px;
     background-color: #fff;
-
+    width: 100%;
+    
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
