--- a/src/layouts/DefaultLayout/components/MyCourses/MyCourse/MyCourse.module.scss
+++ b/src/layouts/DefaultLayout/components/MyCourses/MyCourse/MyCourse.module.scss
@@ -3,9 +3,56 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
 
-    &:hover {
-        background-color: #646363;
+        margin: 0 15px;
+
+
+    .item {
+        transition: background-color .3s;
+        border-radius: 10px;
+        width: 100%;
+
+        &:hover {
+            background-color: #1618230d;
+        }
+
+        a {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
+            padding: 10px 0;
+
+            text-decoration: none;
+            color: #000;
+        }
+
+        .left {
+            flex-shrink: 0;
+
+            .image {
+                width: 120px;
+                min-height: 67px;
+                display: block;
+                border-radius: 8px;
+                background-color: #ebebeb;
+                text-align: center;
+                line-height: 67px;
+            }
+        }
+
+        .right {
+            flex: 1;
+
+            h3 {
+                font-weight: bold;
+            }
+
+            p {
+                margin-top: 5px;
+            }
+        }
+
     }
+
 }
