--- a/src/layouts/DefaultLayout/components/MyCourses/MyCourses.module.scss
+++ b/src/layouts/DefaultLayout/components/MyCourses/MyCourses.module.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    width: 100%;
 
     .title {
         font-weight: bold;
@@ -12,13 +13,34 @@
     .content {
         position: absolute;
         top: calc(100% + 15px); // cách title 8px
-        left: 0;
+        right: 0;
         width: 100%;
-        opacity: 1;
+        min-width: 380px;
+        opacity: 0;
         transform: translateY(-10px);
         pointer-events: none;
-        transition: all 0.3s ease;
-        z-index: 10;
+        flex: 1;
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+
+            .title {
+                text-transform: uppercase;
+            }
+            a {
+                text-decoration: none;
+                padding: 10px;
+                color: var(--primary-color);
+
+                &:hover {
+                    background-color: #f1f1f1;
+                    border-radius: 5px;
+                }
+            }
+        }
     }
 
     .open {
