--- a/src/layouts/DefaultLayout/components/Header/Header.module.scss
+++ b/src/layouts/DefaultLayout/components/Header/Header.module.scss
@@ -26,5 +26,7 @@
     .right {
         display: flex;
         gap: 20px;
+        align-items: center;
+        justify-content: center;
     }
 }
