--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,8 +1,44 @@
+.container,
+.overlay {
+    position: fixed;
+    inset: 0;
+}
+
 .container {
-    border-radius: 10px;
-    padding: 10px;
-    background-color: #fff;
-    width: 100%;
-    
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    z-index: 99999;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.overlay {
+    background: rgba($color: #000000, $alpha: 0.6);
+}
+
+.content {
+    position: relative;
+    z-index: 1;
+    padding: 20px;
+    border-radius: 6px;
+    background: #fff;
+}
+
+.closeBtn {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding: 0;
+
+    color: var(--primary-color);
 }
