--- a/src/pages/ModalDemo/ModalDemo.module.scss
+++ b/src/pages/ModalDemo/ModalDemo.module.scss
@@ -1,3 +1,45 @@
 .container {
     display: flex;
-}
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    align-items: center;
+    justify-content: flex-start;
+
+    h1 {
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+
+    h2 {
+        font-size: 1.4rem;
+        font-weight: bold;
+        padding-bottom: 10px;
+    }
+
+    h5 {
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+    .item {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        min-width: 300px;
+
+        .btnOpenModel {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: var(--primary-color);
+            color: #fff;
+            cursor: pointer;
+            width: 100%;
+            max-width: 200px;
+        }
+    }
+
+    .customModalClassName {
+        color: var(--primary-color);
+    }
+} 
