Add side bar to layout

--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -2,11 +2,23 @@
     display: flex;
     flex-direction: column;
 
+        padding: 0 8px;
     .header {
         height: 60px;
     }
 
+    .sidebar {
+        position: fixed;
+        left: 0;
+        top: 60px;
+        width: var(--layout-sidebar-width);
+        height: calc(100vh - 60px);
+        z-index: 999;
+    }
+
     .content {
         flex: 1;
+        margin-left: var(--layout-sidebar-width);
+        padding: 20px 44px 0;
     }
 }
